Increase height of element to fix bug on mobile

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ textarea {
 
 .display-result {
   font-size: 20px;
-  height: 32px;
+  height: 36px;
   margin: 3px;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
